--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -6,7 +6,7 @@
     "lang_code": "fr"
   },
   "main": {
-    "title": "OpenFront (ALPHA)",
+    "title": "TacticFront",
     "join_discord": "Rejoignez le Discord !",
     "login_discord": "Se connecter avec Discord",
     "logged_in": "Connecté !",
