--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -9,7 +9,7 @@
     "close": "Close"
   },
   "main": {
-    "title": "OpenFront (ALPHA)",
+    "title": "TacticFront",
     "join_discord": "Join the Discord!",
     "login_discord": "Login with Discord",
     "checking_login": "Checking login...",
