--- a/resources/lang/ja.json
+++ b/resources/lang/ja.json
@@ -6,7 +6,7 @@
     "lang_code": "ja"
   },
   "main": {
-    "title": "OpenFront (ALPHA)",
+    "title": "TacticFront.io)",
     "join_discord": "Discordサーバーに参加!",
     "login_discord": "Discordでログイン",
     "logged_in": "ログイン中！",
