fix: update wishlist text to promote Discord; add min tech level for hospital unit; improve logging in HospitalExecution

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -376,7 +376,7 @@
     "other_won": "{player} has won!",
     "exit": "Exit Game",
     "keep": "Keep Playing",
-    "wishlist": "Wishlist on Steam!"
+    "wishlist": "Join our Discord"
   },
   "leaderboard": {
     "title": "Leaderboard",
