--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -48,6 +48,7 @@
     "ui_gold": "Gold - The amount of gold you have and the rate at which you gain it.",
     "ui_troops_workers": "Troops and Workers - The amount of allocated troops and workers. Troops are used to attack or defend against attacks. Workers are used to generate gold. You can adjust the number of troops and workers using the slider.",
     "ui_attack_ratio": "Attack ratio - The amount of troops that will be used when you attack. You can adjust the attack ratio using the slider. Having more attacking troops than defending troops will make you lose fewer troops in the attack, while having less will increase the damage dealt to your attacking troops. The effect doesn't go beyond ratios of 2:1.",
+    "ui_reserve_ratio": "Reserve ratio - The amount of troops that will remain on the defense to protect your homeland rather than being sent into your attacks as reinforcements.",
     "ui_events": "Event panel",
     "ui_events_desc": "The Event panel displays the latest events, requests and Quick Chat messages. Some examples are:",
     "ui_events_alliance": "Alliance - Alliance requests can be accepted or rejected. Allies can share resources and troops, but can't attack each other. Clicking Focus moves the view to the player who sent the request.",
@@ -102,10 +103,18 @@
     "build_hydrogen_desc": "Large explosive bomb. Spawns from the nearest Missile Silo and lands in the area you first clicked to build it.",
     "build_mirv": "MIRV",
     "build_mirv_desc": "The most powerful bomb in the game. Splits up into smaller bombs that will cover a huge range of territory. Only damages the player that you first clicked on to build it. Spawns from the nearest Missile Silo and lands in the area you first clicked to build it.",
-    "build_lab": "Research Lab",
-    "build_lab_desc": "Increases unlocked technologies.",
+    "build_rlab": "Research Lab",
+    "build_rlab_desc": "Increases unlocked technologies.",
+    "build_pplant": "Power Plant",
+    "build_pplant_desc": "Allows nuclear missiles and produces 800 gold per second.",
     "build_barracks": "Barracks",
     "build_barracks_desc": "Trains troops faster.",
+    "build_hospital": "Hospital",
+    "build_hospital_desc": "Faster population growth and some of your troops can survive on your offensives.",
+    "build_hospital": "Hospital",
+    "build_hospital_desc": "Faster population growth and some of your troops can survive on your offensives.",
+    "build_cruise": "Cruise Missile",
+    "build_cruise_desc": "Strike once to temporarily disable enemy silos, sams and defense posts. A second hit will destroy them.",
     "player_icons": "Player icons",
     "icon_desc": "Examples of some of the ingame icons you will encounter and what they mean:",
     "icon_crown": "Crown - Number 1. This is the top player in the leaderboard.",
